# vkui

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
cmake/: VkUICompilerWarnings.cmake  VkUIConfig.cmake.in  VkUISanitizers.cmake
docs/: architecture.md  development.md  icons.md  motion.md  popover.md  segmented-control.md  style.md  switch.md  theme.md
examples/gallery/: CMakeLists.txt  GalleryFileTreeView.cpp  GalleryFileTreeView.h  GalleryFonts.cpp  GalleryFonts.h  GalleryWindow.cpp  GalleryWindow.h  gallery.qrc  main.cpp
examples/gallery/pages/: IconsPage.cpp  IconsPage.h  LocalizationPage.cpp  LocalizationPage.h  MotionPage.cpp  MotionPage.h  PopoverPage.cpp  PopoverPage.h  SegmentedControlPage.cpp  SegmentedControlPage.h  StandardWidgetsPage.cpp  StandardWidgetsPage.h  SwitchPage.cpp  SwitchPage.h  ThemePage.cpp  ThemePage.h
include/vkui/: Core.h  VkUiGlobal.h  Widgets.h
include/vkui/core/: VkAccentColor.h  VkAppearance.h  VkColorTokens.h  VkIcon.h  VkMetricTokens.h  VkMotion.h  VkTheme.h  VkThemeManager.h  VkTypographyTokens.h
include/vkui/widgets/: VkComboBox.h  VkControlSize.h
include/vkui/widgets/controls/: VkSegmentedControl.h  VkSwitch.h
include/vkui/widgets/overlays/: VkPopover.h
include/vkui/widgets/style/: VkStyle.h  VkStyleSheet.h
resources/: vkui.qrc
resources/translations/: vkui_en.ts  vkui_zh_CN.ts
src/core/icons/: VkIcon.cpp
src/core/icons/private/: VkIconCache.cpp  VkIconCache_p.h  VkSvgIconEngine.cpp  VkSvgIconEngine_p.h
src/core/motion/: VkMotion.cpp
src/core/theme/: VkTheme.cpp  VkThemeManager.cpp
src/core/theme/private/: VkThemeManager_p.h
src/widgets/: VkComboBox.cpp
src/widgets/animation/private/: VkWidgetAnimation.cpp  VkWidgetAnimation_p.h
src/widgets/controls/: VkSegmentedControl.cpp  VkSwitch.cpp
src/widgets/controls/private/: VkSegmentedControl_p.h  VkSwitch_p.h
src/widgets/overlays/: VkPopover.cpp
src/widgets/overlays/private/: VkPopoverAnimation.cpp  VkPopoverAnimation_p.h  VkPopoverPath.cpp  VkPopoverPath_p.h  VkPopoverPlacementEngine.cpp  VkPopoverPlacementEngine_p.h  VkPopoverShadowCache.cpp  VkPopoverShadowCache_p.h  VkPopover_p.h
src/widgets/style/: VkControlSize.cpp  VkStyle.cpp  VkStyleSheet.cpp
src/widgets/style/private/: VkStylePainter.cpp  VkStylePainter_p.h  VkStyle_p.h  VkWidgetAnimationManager.cpp  VkWidgetAnimationManager_p.h
tests/: CMakeLists.txt  tst_icons.cpp  tst_motion.cpp  tst_popoverinteraction.cpp  tst_popoverpath.cpp  tst_popoverplacement.cpp  tst_segmentedcontrol.cpp  tst_style.cpp  tst_switch.cpp  tst_theme.cpp
tests/consumers/add_subdirectory/: CMakeLists.txt  main.cpp
tests/consumers/find_package/: CMakeLists.txt  main.cpp
tests/consumers/find_package_core/: CMakeLists.txt  main.cpp
